wanna eat and sleep

--- a/bibliographic.tex
+++ b/bibliographic.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-	Random citation \cite{DUMMY:1} embeddeed in text.
+	Random citation \cite{ARTICLE:1} embeddeed in text.
 
 	\newpage
 
