--- a/cite.bib
+++ b/cite.bib
@@ -10,3 +10,17 @@
 	PUBLISHER="Dummy Publisher2",
 	YEAR="2200",
 }
+@ARTICLE{ARTICLE:1,
+	AUTHOR="John Doe3",
+	TITLE="The  without Title3",
+	JOURNAL="journal",
+	YEAR="2300",
+}
+@MISC{WEBSITE:1,
+	HOWPUBLISHED = "\url{http://example.com}",
+	AUTHOR= "Intel",
+	TITLE = "Example Website",
+	MONTH = "Dec",
+	YEAR = "1988",
+	NOTE = "Accessed on 2012-11-11"
+}
